Update index.html with personal information and styles

--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Zhengze Yu</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Zhengze Yu</title>
+  <style>
+    body {
+      font-family: "Times New Roman", serif;
+      max-width: 800px;
+      margin: 40px auto;
+      line-height: 1.6;
+      color: #222;
+    }
+    h1, h2 {
+      text-align: center;
+    }
+    a {
+      color: #0056b3;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .links {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    .section {
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Hello, this is my GitHub Pages!</h1>
-    <p>Welcome to my personal website.</p>
+  <h1>Zhengze Yu</h1>
+  <div class="links">
+    <a href="mailto:yuzhengze21@mails.ucas.ac.cn">Email</a> |
+    <a href="https://scholar.google.com/citations?user=XXXXXX">Google Scholar</a> |
+    <a href="https://github.com/zhengze-yu">GitHub</a>
+  </div>
+
+  <p>Hello! I am <b>Zhengze Yu</b>, an undergraduate at the <b>University of Chinese Academy of Sciences</b>, majoring in <b>Artificial Intelligence</b>. My research interests include video editing, cross-modal content generation, and large language models (LLMs).</p>
+
+  <div class="section">
+    <h2>Education</h2>
+    <p><b>University of Chinese Academy of Sciences</b>, B.E. in Artificial Intelligence (2021–2025)</p>
+  </div>
+
+  <div class="section">
+    <h2>Research</h2>
+    <ul>
+      <li><b>Video Editing Based on Attention Injection</b> — Developed multi-stage cross-modal editing pipeline integrating text, image, and video.</li>
+      <li><b>Multilingual Text Compression via Subword Tokenization</b> — Applied BPE and analyzed multilingual compression efficiency for LLM tokenization.</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Projects</h2>
+    <ul>
+      <li>Cross-Domain Multilingual Text Clustering Analysis</li>
+      <li>Video Generation Models and Optimization Techniques</li>
+    </ul>
+  </div>
 </body>
 </html>
