--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <!-- ABOUT -->
   <section id="about">
     <div class="about">
-      <img src="profile.jpg" alt="Profile photo">
+      <img src="pic/profile.jpg" alt="Profile photo">
       <div class="about-text">
         <h1>Zhengze Yu</h1>
         <p class="about-subtitle">Undergraduate in Artificial Intelligence at the University of Chinese Academy of Sciences · advised by Prof. [Advisor Name]</p>
