--- a/index.html
+++ b/index.html
@@ -157,9 +157,25 @@
           <span>Large Language Models</span>
         </div>
         <div class="contact-buttons">
-          <a href="mailto:your_email@example.com">Email</a>
-          <a href="cv.pdf">CV</a>
-        </div>
+  <!-- Email button with mail icon -->
+  <a href="mailto:your_email@example.com">
+    <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M4 4h16v16H4z" fill="none"/>
+      <polyline points="22,6 12,13 2,6"/>
+    </svg>
+    Email
+  </a>
+
+  <!-- CV button with document icon -->
+  <a href="cv.pdf">
+    <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+      <polyline points="14 2 14 8 20 8"/>
+    </svg>
+    CV
+  </a>
+</div>
+
       </div>
     </div>
   </section>
