--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ nav a:hover {
       <img src="profile.jpg" alt="Profile photo">
       <div class="about-text">
         <h1>Zhengze Yu</h1>
-        <p class="about-subtitle">Undergraduate in Artificial Intelligence at the University of Chinese Academy of Sciences · advised by Prof. [Advisor Name]</p>
+        <p class="about-subtitle">B.E. in Artificial intelligence, University of Chinese Academy of Sciences (UCAS) </p>
         <div class="tags">
           <span>Multimodal AI</span>
           <span>Video Editing</span>
