Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ nav a:hover {
   <!-- CONTACT -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your_email@example.com">your_email@example.com</a></p>
+    <p>Email: <a href="yuzhengze21@mails.ucas.ac.com">your_email@example.com</a></p>
     <p>CV: <a href="cv.pdf">Download Here</a></p>
   </section>
 
