--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@ nav a:hover {
       <nav>
         <a href="#about">About</a>
         <a href="#news">News</a>
-        <a href="#education">Education</a>
         <a href="#research">Research</a>
+         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -189,7 +189,7 @@ nav a:hover {
         </div>
         <div class="contact-buttons">
   <!-- Email button with mail icon -->
-  <a href="mailto:your_email@example.com">
+  <a href="mailto:yuzhengze21@mails.ucas.ac.cn">
     <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M4 4h16v16H4z" fill="none"/>
       <polyline points="22,6 12,13 2,6"/>
@@ -220,12 +220,6 @@ nav a:hover {
     </ul>
   </section>
 
-  <!-- EDUCATION -->
-  <section id="education">
-    <h2>Education</h2>
-    <p><b>University of Chinese Academy of Sciences</b><br>B.E. in Artificial Intelligence · Sep 2021 – Jun 2025</p>
-  </section>
-
   <!-- RESEARCH -->
   <section id="research">
     <h2>Research</h2>
@@ -235,10 +229,18 @@ nav a:hover {
     </ul>
   </section>
 
+    <!-- PROJECT -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li><b>Video Editing Based on Attention Injection</b> — Multi-stage cross-modal video editing framework integrating text, image, and video.</li>
+      <li><b>Multilingual Text Compression via Subword Tokenization</b> — Applied BPE for multilingual compression and token representation optimization.</li>
+    </ul>
+  </section>
   <!-- CONTACT -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="yuzhengze21@mails.ucas.ac.com">your_email@example.com</a></p>
+    <p>Email: <a href="yuzhengze21@mails.ucas.ac.cn">yuzhengze21@mails.ucas.ac.cn</a></p>
     <p>CV: <a href="cv.pdf">Download Here</a></p>
   </section>
 
