--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@ nav a:hover {
         <h1>Zhengze Yu</h1>
         <p class="about-subtitle">B.E. in Artificial intelligence, University of Chinese Academy of Sciences (UCAS) </p>
         <div class="tags">
-          <span>Multimodal AI</span>
+          <span>Multimodal Learning</span>
           <span>Video Editing</span>
-          <span>Large Language Models</span>
+          <span>Vision-Language Alignment</span>
         </div>
         <div class="contact-buttons">
   <!-- Email button with mail icon -->
