--- a/index.html
+++ b/index.html
@@ -207,6 +207,24 @@ nav a:hover {
   </a>
 </div>
 
+  <p class="intro" style="max-width: 700px; margin: 30px auto 0 auto; font-size: 15px; line-height: 1.7; text-align: center;">
+  <b>Welcome to my page!</b> I work on <b>video editing</b> and <b>multimodal learning</b>, with a focus on 
+  <b>vision-language alignment</b> and <b>generative models</b> for controllable video transformation.
+  <br><br>
+  I am an undergraduate researcher at the <b>Institute of Automation, Chinese Academy of Sciences (UCAS)</b>, 
+  where I explore multimodal generation and video understanding. 
+  My recent projects involve <b>attention-injection-based video editing</b> and <b>cross-modal alignment frameworks</b>.
+  <br><br>
+  I am fortunate to be advised by <b>Prof. Junyu Gao</b>, whose guidance has greatly shaped my research 
+  in video generation and alignment methods.
+  <br><br>
+  For more details, please check my 
+  <a href="cv.pdf" target="_blank"><b>CV</b></a> 
+  or reach out via 
+  <a href="mailto:yuzhengze21@mails.ucas.ac.cn"><b>email</b></a>.
+</p>
+
+
       </div>
     </div>
   </section>
