--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ nav a:hover {
   <div class="container nav-container">
       <div class="nav-name">Zhengze Yu</div>
       <nav>
-        <a href="#about">About</a>
+        <a href="#about">About me</a>
         <a href="#news">News</a>
         <a href="#research">Research</a>
          <a href="#projects">Projects</a>
