--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ nav a:hover {
   </a>
 </div>
 
-  <p class="intro" style="max-width: 700px; margin: 30px auto 0 auto; font-size: 15px; line-height: 1.7; text-align: center;">
+  <p class="intro" style="margin-top: 24px; font-size: 15px; line-height: 1.7; text-align: left; color: #333;">
   <b>Welcome to my page!</b> I work on <b>video editing</b> and <b>multimodal learning</b>, with a focus on 
   <b>vision-language alignment</b> and <b>generative models</b> for controllable video transformation.
   <br><br>
