--- a/index.html
+++ b/index.html
@@ -136,16 +136,15 @@ nav a:hover {
   line-height: 1.7;
   color: #333;
   margin-top: 24px;
-  padding-left: 210px; /* ✅ 对齐头像左边缘：头像180px + 左右间距30px */
   max-width: 720px; /* 控制宽度 */
 }
 
 @media (max-width: 700px) {
   .intro {
-    padding-left: 0; /* 手机端自动居中 */
-    margin-top: 16px;
+    margin-top: 16px; /* 手机端自动上间距 */
   }
 }
+
 
 
     /* -------- BUTTONS -------- */
@@ -192,56 +191,55 @@ nav a:hover {
   </header>
 
   <!-- ABOUT -->
-  <section id="about">
-    <div class="about">
-      <img src="profile.jpg" alt="Profile photo">
-      <div class="about-text">
-        <h1>Zhengze Yu</h1>
-        <p class="about-subtitle">B.E. in Artificial intelligence, University of Chinese Academy of Sciences (UCAS) </p>
-        <div class="tags">
-          <span>Multimodal Learning</span>
-          <span>Video Editing</span>
-          <span>Vision-Language Alignment</span>
-        </div>
-        <div class="contact-buttons">
-  <!-- Email button with mail icon -->
-  <a href="mailto:yuzhengze21@mails.ucas.ac.cn">
-    <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M4 4h16v16H4z" fill="none"/>
-      <polyline points="22,6 12,13 2,6"/>
-    </svg>
-    Email
-  </a>
-
-  <!-- CV button with document icon -->
-  <a href="cv.pdf">
-    <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
-      <polyline points="14 2 14 8 20 8"/>
-    </svg>
-    CV
-  </a>
-</div>
+<section id="about">
+  <div class="about">
+    <img src="profile.jpg" alt="Profile photo">
+    <div class="about-text">
+      <h1>Zhengze Yu</h1>
+      <p class="about-subtitle">B.E. in Artificial Intelligence, University of Chinese Academy of Sciences (UCAS)</p>
+      <div class="tags">
+        <span>Multimodal Learning</span>
+        <span>Video Editing</span>
+        <span>Vision-Language Alignment</span>
       </div>
-    </div>
-      <p class="intro">
-    <b>Welcome to my page!</b> I work on <b>video editing</b> and <b>multimodal learning</b>, 
-    with a focus on <b>vision-language alignment</b> and <b>generative models</b> for controllable video transformation.
-    <br><br>
-    I am an undergraduate researcher at the <b>Institute of Automation, Chinese Academy of Sciences (UCAS)</b>, 
-    where I explore multimodal generation and video understanding. 
-    My recent projects involve <b>attention-injection-based video editing</b> and <b>cross-modal alignment frameworks</b>.
-    <br><br>
-    I am fortunate to be advised by <b>Prof. Junyu Gao</b>, whose guidance has greatly shaped my research 
-    in video generation and alignment methods.
-    <br><br>
-    For more details, please check my 
-    <a href="cv.pdf" target="_blank"><b>CV</b></a> 
-    or reach out via 
-    <a href="mailto:yuzhengze21@mails.ucas.ac.cn"><b>email</b></a>.
-  </p>
+      <div class="contact-buttons">
+        <a href="mailto:yuzhengze21@mails.ucas.ac.cn">
+          <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 4h16v16H4z" fill="none"/>
+            <polyline points="22,6 12,13 2,6"/>
+          </svg>
+          Email
+        </a>
+        <a href="cv.pdf">
+          <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+            <polyline points="14 2 14 8 20 8"/>
+          </svg>
+          CV
+        </a>
+      </div>
 
-  </section>
+      <!-- ✅ intro 段落放在这里 -->
+      <p class="intro">
+        <b>Welcome to my page!</b> I work on <b>video editing</b> and <b>multimodal learning</b>, 
+        with a focus on <b>vision-language alignment</b> and <b>generative models</b> for controllable video transformation.
+        <br><br>
+        I am an undergraduate researcher at the <b>Institute of Automation, Chinese Academy of Sciences (UCAS)</b>, 
+        where I explore multimodal generation and video understanding. 
+        My recent projects involve <b>attention-injection-based video editing</b> and <b>cross-modal alignment frameworks</b>.
+        <br><br>
+        I am fortunate to be advised by <b>Prof. Junyu Gao</b>, whose guidance has greatly shaped my research 
+        in video generation and alignment methods.
+        <br><br>
+        For more details, please check my 
+        <a href="cv.pdf" target="_blank"><b>CV</b></a> 
+        or reach out via 
+        <a href="mailto:yuzhengze21@mails.ucas.ac.cn"><b>email</b></a>.
+      </p>
+    </div>
+  </div>
+</section>
+
 
   <!-- NEWS -->
   <section id="news">
